--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="address">Address: 23, katpadi road, shihole , vellore</string>
     <string name="email">Email : shhuwpj123@gmail.com</string>
     <string name="webs">Website: www.zomato.com/pr_cateres</string>
+    <string name="menu">Menu</string>
 </resources>
